--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
